[package]
name = "abc217"
version = "0.1.0"
authors = ["kimotu4632uz <32472396+kimotu4632uz@users.noreply.github.com>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = { name = "abc217-a", problem = { platform = "atcoder", contest = "abc217", index = "A", url = "https://atcoder.jp/contests/abc217/tasks/abc217_a" } }
b = { name = "abc217-b", problem = { platform = "atcoder", contest = "abc217", index = "B", url = "https://atcoder.jp/contests/abc217/tasks/abc217_b" } }
c = { name = "abc217-c", problem = { platform = "atcoder", contest = "abc217", index = "C", url = "https://atcoder.jp/contests/abc217/tasks/abc217_c" } }
d = { name = "abc217-d", problem = { platform = "atcoder", contest = "abc217", index = "D", url = "https://atcoder.jp/contests/abc217/tasks/abc217_d" } }
e = { name = "abc217-e", problem = { platform = "atcoder", contest = "abc217", index = "E", url = "https://atcoder.jp/contests/abc217/tasks/abc217_e" } }
f = { name = "abc217-f", problem = { platform = "atcoder", contest = "abc217", index = "F", url = "https://atcoder.jp/contests/abc217/tasks/abc217_f" } }
g = { name = "abc217-g", problem = { platform = "atcoder", contest = "abc217", index = "G", url = "https://atcoder.jp/contests/abc217/tasks/abc217_g" } }
h = { name = "abc217-h", problem = { platform = "atcoder", contest = "abc217", index = "H", url = "https://atcoder.jp/contests/abc217/tasks/abc217_h" } }

[[bin]]
name = "abc217-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc217-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc217-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc217-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc217-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc217-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc217-g"
path = "src/bin/g.rs"

[[bin]]
name = "abc217-h"
path = "src/bin/h.rs"
[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
